src/test/ui/nll/ty-outlives/projection-implied-bounds.stderr
warning: not reporting region error due to -Znll
  --> $DIR/projection-implied-bounds.rs:45:36
   |
45 |     twice(value, |value_ref, item| invoke2(value_ref, item));
   |                                    ^^^^^^^

error: failed type test: TypeTest { generic_kind: T/#0, lower_bound: '_#0r, point: bb0[3], span: $DIR/projection-implied-bounds.rs:45:18: 45:60, test: IsOutlivedByAnyRegionIn(['_#1r]) }
  --> $DIR/projection-implied-bounds.rs:45:18
   |
45 |     twice(value, |value_ref, item| invoke2(value_ref, item));
   |                  ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: aborting due to previous error

